--- a/filesToCopy/.gitconfig
+++ b/filesToCopy/.gitconfig
@@ -4,11 +4,11 @@
 [diff]
     tool = vscode
 [difftool "vscode"]
-    cmd = code --wait --diff $LOCAL $REMOTE
+    cmd = code --reuse-window --wait --diff $LOCAL $REMOTE
 [merge]
     tool = vscode
 [mergetool "vscode"]
-    cmd = code --wait $MERGED
+    cmd = code --reuse-window --wait $MERGED
 [alias]
     logline = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [mergetool]
